improve structure, use sass for styles, added links and fix some linter warnings

--- a/sample/index.html
+++ b/sample/index.html
@@ -75,8 +75,8 @@
               }, {
                 styleClass: 'col-md-8',
                 widgets: [{
-                  type: 'travis',
-                  title: 'Travis CI',
+                  type: 'travis-history',
+                  title: 'Travis CI History',
                   config: {}
                 }]
               }]
