--- a/src/history/history.html
+++ b/src/history/history.html
@@ -11,7 +11,11 @@
                alt="">
         </div>
         <div class="media-body">
-          <h4 class="media-heading" ng-class="vm.headingClass(build)">{{build.number}} {{build.state}}</h4>
+          <h4 class="media-heading">
+            <a href="{{build.htmlUrl}}" ng-class="vm.headingClass(build)">
+              {{build.number}} {{build.state}}
+            </a>
+          </h4>
           <p>{{build.description}}</p>
           <small>{{build.commit.author_name}}, {{build.started_at | date: 'yyyy-MM-dd HH:mm'}}</small>
         </div>
