open travis links in a new tab

--- a/src/history/history.html
+++ b/src/history/history.html
@@ -12,7 +12,7 @@
         </div>
         <div class="media-body">
           <h4 class="media-heading">
-            <a href="{{build.htmlUrl}}" ng-class="vm.headingClass(build)">
+            <a href="{{build.htmlUrl}}" ng-class="vm.headingClass(build)" target="_blank">
               {{build.number}} {{build.state}}
             </a>
           </h4>
